--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,9 +18,9 @@ jobs:
       with:
         dotnet-version: 5.0.x
     - name: Restore dependencies
-      run: dotnet restore "./src/Neuroglia.Framework.sln"
+      run: dotnet restore "./src/Neuroglia Framework.sln"
     - name: Build
-      run: dotnet build "./src/Neuroglia.Framework.sln" --configuration Release --no-restore 
+      run: dotnet build "./src/Neuroglia Framework.sln" --configuration Release --no-restore 
     - name: Test
       run: dotnet test --no-build --verbosity normal
     - name: Push
