--- a/src/Serialization/Neuroglia.Serialization.Avro/Neuroglia.Serialization.Avro.csproj
+++ b/src/Serialization/Neuroglia.Serialization.Avro/Neuroglia.Serialization.Avro.csproj
@@ -8,7 +8,7 @@
     <Authors>Neuroglia SPRL</Authors>
     <RepositoryUrl>https://github.com/neuroglia-io/framework</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <PackageTags>neuroglia framework serialization json</PackageTags>
+    <PackageTags>neuroglia framework serialization avro</PackageTags>
     <Version>2.0.0</Version>
     <AssemblyVersion>2.0.0.0</AssemblyVersion>
     <FileVersion>2.0.0.0</FileVersion>
@@ -21,11 +21,12 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <DocumentationFile>Neuroglia.Serialization.Json.xml</DocumentationFile>
+    <DocumentationFile>Neuroglia.Serialization.Avro.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Options" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Hadoop.Avro-Core" Version="1.1.19" />
   </ItemGroup>
 
   <ItemGroup>
