--- a/src/AspNetCore/Neuroglia.AspNetCore/Neuroglia.AspNetCore.csproj
+++ b/src/AspNetCore/Neuroglia.AspNetCore/Neuroglia.AspNetCore.csproj
@@ -9,10 +9,10 @@
     <RepositoryUrl>https://github.com/neuroglia-io/framework</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>neuroglia framework asp core</PackageTags>
-    <Version>2.0.0.11</Version>
-    <AssemblyVersion>2.0.0.11</AssemblyVersion>
-    <FileVersion>2.0.0.11</FileVersion>
-    <NeutralLanguage>English</NeutralLanguage>
+    <Version>2.0.0.12</Version>
+    <AssemblyVersion>2.0.0.12</AssemblyVersion>
+    <FileVersion>2.0.0.12</FileVersion>
+    <NeutralLanguage>en</NeutralLanguage>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
