--- a/src/Data/Neuroglia.Data.EventSourcing.EventStore/Neuroglia.Data.EventSourcing.EventStore.csproj
+++ b/src/Data/Neuroglia.Data.EventSourcing.EventStore/Neuroglia.Data.EventSourcing.EventStore.csproj
@@ -8,10 +8,10 @@
     <RepositoryUrl>https://github.com/neuroglia-io/framework</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>neuroglia framework data event sourcing eventstore</PackageTags>
-    <Version>2.0.0.11</Version>
-    <AssemblyVersion>2.0.0.11</AssemblyVersion>
-    <FileVersion>2.0.0.11</FileVersion>
-    <NeutralLanguage>English</NeutralLanguage>
+    <Version>2.0.0.12</Version>
+    <AssemblyVersion>2.0.0.12</AssemblyVersion>
+    <FileVersion>2.0.0.12</FileVersion>
+    <NeutralLanguage>en</NeutralLanguage>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
