--- a/src/Testing/Neuroglia.AspNetCore.Mvc.Testing/Neuroglia.AspNetCore.Mvc.Testing.csproj
+++ b/src/Testing/Neuroglia.AspNetCore.Mvc.Testing/Neuroglia.AspNetCore.Mvc.Testing.csproj
@@ -2,13 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>Neuroglia.Data</RootNamespace>
     <Company>Neuroglia SPRL</Company>
     <Copyright>Copyright © 2021 Neuroglia SPRL. All rights reserved.</Copyright>
     <Authors>Neuroglia SPRL</Authors>
     <RepositoryUrl>https://github.com/neuroglia-io/framework</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <PackageTags>neuroglia framework data entity ef</PackageTags>
+    <PackageTags>neuroglia framework asp mvc testing</PackageTags>
     <Version>2.0.0.17</Version>
     <AssemblyVersion>2.0.0.17</AssemblyVersion>
     <FileVersion>2.0.0.17</FileVersion>
@@ -21,26 +20,28 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <DocumentationFile>Neuroglia.Data.EntityFrameworkCore.xml</DocumentationFile>
+    <DocumentationFile>Neuroglia.AspNetCore.Mvc.Testing.xml</DocumentationFile>
+    <RootNamespace>Microsoft.AspNetCore.Mvc.Testing</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.7" />
+    <None Include="..\..\..\assets\img\logo_white_on_blue_256.png" Link="logo_white_on_blue_256.png">
+      <PackagePath></PackagePath>
+      <Pack>True</Pack>
+    </None>
+    <None Include="..\..\..\LICENSE" Link="LICENSE">
+      <PackagePath></PackagePath>
+      <Pack>True</Pack>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Neuroglia.Data\Neuroglia.Data.csproj" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="5.0.8" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="..\..\..\assets\img\logo_white_on_blue_256.png">
-      <Pack>True</Pack>
-      <PackagePath></PackagePath>
-    </None>
-    <None Include="..\..\..\LICENSE">
-      <Pack>True</Pack>
-      <PackagePath></PackagePath>
-    </None>
+    <ProjectReference Include="..\..\AspNetCore\Neuroglia.AspNetCore\Neuroglia.AspNetCore.csproj" />
   </ItemGroup>
 
 </Project>
