--- a/src/Data/Neuroglia.Data.EventSourcing.EventStore/Neuroglia.Data.EventSourcing.EventStore.csproj
+++ b/src/Data/Neuroglia.Data.EventSourcing.EventStore/Neuroglia.Data.EventSourcing.EventStore.csproj
@@ -21,6 +21,7 @@
 
   <PropertyGroup>
     <DocumentationFile>Neuroglia.Data.EventSourcing.EventStore.xml</DocumentationFile>
+    <RootNamespace>Neuroglia.Data.EventSourcing</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -28,12 +29,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Serialization\Neuroglia.Serialization.Abstractions\Neuroglia.Serialization.Abstractions.csproj" />
+    <ProjectReference Include="..\..\Serialization\Neuroglia.Serialization.NewtonsoftJson\Neuroglia.Serialization.NewtonsoftJson.csproj" />
     <ProjectReference Include="..\Neuroglia.Data.EventSourcing\Neuroglia.Data.EventSourcing.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Services\" />
   </ItemGroup>
   
   <ItemGroup>
