--- a/src/Data/Neuroglia.Data.EventSourcing.EventStore/Neuroglia.Data.EventSourcing.EventStore.csproj
+++ b/src/Data/Neuroglia.Data.EventSourcing.EventStore/Neuroglia.Data.EventSourcing.EventStore.csproj
@@ -41,7 +41,8 @@
   </ItemGroup>
   
   <ItemGroup>
-    <PackageReference Include="EventStore.Client" Version="21.2.0" />
+    <PackageReference Include="EventStore.Client.Grpc.PersistentSubscriptions" Version="21.2.0" />
+    <PackageReference Include="EventStore.Client.Grpc.Streams" Version="21.2.0" />
   </ItemGroup>
 
 </Project>
