--- a/src/Data/Neuroglia.Data.OData/Neuroglia.Data.OData.csproj
+++ b/src/Data/Neuroglia.Data.OData/Neuroglia.Data.OData.csproj
@@ -9,9 +9,9 @@
 		<RepositoryUrl>https://github.com/neuroglia-io/framework</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
 		<PackageTags>neuroglia framework data odata</PackageTags>
-		<Version>2.0.0.29</Version>
-		<AssemblyVersion>2.0.0.29</AssemblyVersion>
-		<FileVersion>2.0.0.29</FileVersion>
+		<Version>2.0.0.30</Version>
+		<AssemblyVersion>2.0.0.30</AssemblyVersion>
+		<FileVersion>2.0.0.30</FileVersion>
 		<NeutralLanguage>en</NeutralLanguage>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
@@ -40,7 +40,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	<ProjectReference Include="..\..\Core\Neuroglia.Core\Neuroglia.Core.csproj" />
+	  <ProjectReference Include="..\Neuroglia.Data\Neuroglia.Data.csproj" />
 	</ItemGroup>
 
 </Project>
