--- a/src/Data/Neuroglia.Data.OData/Neuroglia.Data.OData.csproj
+++ b/src/Data/Neuroglia.Data.OData/Neuroglia.Data.OData.csproj
@@ -9,9 +9,9 @@
 		<RepositoryUrl>https://github.com/neuroglia-io/framework</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
 		<PackageTags>neuroglia framework data odata</PackageTags>
-		<Version>2.0.0.31</Version>
-		<AssemblyVersion>2.0.0.31</AssemblyVersion>
-		<FileVersion>2.0.0.31</FileVersion>
+		<Version>2.0.0.32</Version>
+		<AssemblyVersion>2.0.0.32</AssemblyVersion>
+		<FileVersion>2.0.0.32</FileVersion>
 		<NeutralLanguage>en</NeutralLanguage>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
@@ -37,6 +37,7 @@
 
 	<ItemGroup>
 	<PackageReference Include="Simple.OData.Client" Version="5.25.0" />
+	<PackageReference Include="System.Linq.Async" Version="5.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
