--- a/src/Data/Neuroglia.Data.Csv/Neuroglia.Data.Csv.csproj
+++ b/src/Data/Neuroglia.Data.Csv/Neuroglia.Data.Csv.csproj
@@ -8,7 +8,7 @@
 		<Authors>Neuroglia SPRL</Authors>
 		<RepositoryUrl>https://github.com/neuroglia-io/framework</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
-		<PackageTags>neuroglia framework data odata</PackageTags>
+		<PackageTags>neuroglia framework data csv</PackageTags>
 		<Version>2.0.0.38</Version>
 		<AssemblyVersion>2.0.0.38</AssemblyVersion>
 		<FileVersion>2.0.0.38</FileVersion>
@@ -21,27 +21,18 @@
 	</PropertyGroup>
 
 	<PropertyGroup>
-		<DocumentationFile>Neuroglia.Data.OData.xml</DocumentationFile>
+		<DocumentationFile>Neuroglia.Data.Csv.xml</DocumentationFile>
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <None Include="..\..\..\assets\img\logo_white_on_blue_256.png" Link="logo_white_on_blue_256.png">
-	    <PackagePath></PackagePath>
-	    <Pack>True</Pack>
-	  </None>
-	  <None Include="..\..\..\LICENSE" Link="LICENSE">
-	    <PackagePath></PackagePath>
-	    <Pack>True</Pack>
-	  </None>
-	</ItemGroup>
-
-	<ItemGroup>
-	<PackageReference Include="Simple.OData.Client" Version="5.25.0" />
-	<PackageReference Include="System.Linq.Async" Version="5.0.0" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <ProjectReference Include="..\Neuroglia.Data\Neuroglia.Data.csproj" />
+		<None Include="..\..\..\assets\img\logo_white_on_blue_256.png">
+			<Pack>True</Pack>
+			<PackagePath></PackagePath>
+		</None>
+		<None Include="..\..\..\LICENSE">
+			<Pack>True</Pack>
+			<PackagePath></PackagePath>
+		</None>
 	</ItemGroup>
 
 </Project>
