--- a/src/Data/Neuroglia.Data.MongoDB/Neuroglia.Data.MongoDB.csproj
+++ b/src/Data/Neuroglia.Data.MongoDB/Neuroglia.Data.MongoDB.csproj
@@ -9,9 +9,9 @@
     <RepositoryUrl>https://github.com/neuroglia-io/framework</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>neuroglia framework data mongo mongodb</PackageTags>
-    <Version>2.0.0.39</Version>
-    <AssemblyVersion>2.0.0.39</AssemblyVersion>
-    <FileVersion>2.0.0.39</FileVersion>
+    <Version>2.0.0.40</Version>
+    <AssemblyVersion>2.0.0.40</AssemblyVersion>
+    <FileVersion>2.0.0.40</FileVersion>
     <NeutralLanguage>en</NeutralLanguage>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
@@ -26,6 +26,7 @@
 
   <ItemGroup>
     <PackageReference Include="MongoDB.Driver" Version="2.12.4" />
+    <PackageReference Include="MongoDB.Driver.Core.Extensions.DiagnosticSources" Version="1.1.0" />
   </ItemGroup>
 
   <ItemGroup>
