--- a/src/Mediation/Neuroglia.Mediation.Extensions.OpenTelemetry/Neuroglia.Mediation.Extensions.OpenTelemetry.csproj
+++ b/src/Mediation/Neuroglia.Mediation.Extensions.OpenTelemetry/Neuroglia.Mediation.Extensions.OpenTelemetry.csproj
@@ -2,13 +2,13 @@
 
 	<PropertyGroup>
 		<TargetFramework>net5.0</TargetFramework>
-		<RootNamespace>Neuroglia.Data</RootNamespace>
+		<RootNamespace>Neuroglia.Mediation</RootNamespace>
 		<Company>Neuroglia SPRL</Company>
 		<Copyright>Copyright © 2021 Neuroglia SPRL. All rights reserved.</Copyright>
 		<Authors>Neuroglia SPRL</Authors>
 		<RepositoryUrl>https://github.com/neuroglia-io/framework</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
-		<PackageTags>neuroglia framework data odata</PackageTags>
+		<PackageTags>neuroglia framework mediation opentelemetry instrumentation</PackageTags>
 		<Version>2.0.0.40</Version>
 		<AssemblyVersion>2.0.0.40</AssemblyVersion>
 		<FileVersion>2.0.0.40</FileVersion>
@@ -21,27 +21,26 @@
 	</PropertyGroup>
 
 	<PropertyGroup>
-		<DocumentationFile>Neuroglia.Data.OData.xml</DocumentationFile>
+		<DocumentationFile>Neuroglia.Mediation.Extensions.OpenTelemetry.xml</DocumentationFile>
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <None Include="..\..\..\assets\img\logo_white_on_blue_256.png" Link="logo_white_on_blue_256.png">
-	    <PackagePath></PackagePath>
-	    <Pack>True</Pack>
-	  </None>
-	  <None Include="..\..\..\LICENSE" Link="LICENSE">
-	    <PackagePath></PackagePath>
-	    <Pack>True</Pack>
-	  </None>
+		<None Include="..\..\..\assets\img\logo_white_on_blue_256.png">
+			<Pack>True</Pack>
+			<PackagePath></PackagePath>
+		</None>
+		<None Include="..\..\..\LICENSE">
+			<Pack>True</Pack>
+			<PackagePath></PackagePath>
+		</None>
 	</ItemGroup>
 
 	<ItemGroup>
-	<PackageReference Include="Simple.OData.Client" Version="5.25.0" />
-	<PackageReference Include="System.Linq.Async" Version="5.0.0" />
+	  <PackageReference Include="OpenTelemetry.Api" Version="1.1.0" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\Neuroglia.Data\Neuroglia.Data.csproj" />
+	  <ProjectReference Include="..\Neuroglia.Mediation\Neuroglia.Mediation.csproj" />
 	</ItemGroup>
 
 </Project>
