--- a/src/Data/Neuroglia.Data.MongoDB/Neuroglia.Data.MongoDB.csproj
+++ b/src/Data/Neuroglia.Data.MongoDB/Neuroglia.Data.MongoDB.csproj
@@ -25,7 +25,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MongoDB.Driver" Version="2.12.4" />
+    <PackageReference Include="MongoDB.Driver" Version="2.14.0-beta1" />
     <PackageReference Include="MongoDB.Driver.Core.Extensions.DiagnosticSources" Version="1.1.0" />
   </ItemGroup>
 
