Fixed package references

--- a/src/Core/Neuroglia.Core/Neuroglia.Core.csproj
+++ b/src/Core/Neuroglia.Core/Neuroglia.Core.csproj
@@ -27,6 +27,7 @@
   <ItemGroup>
     <PackageReference Include="Iso8601DurationHelper" Version="1.0.5" />
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="6.0.0" />
+    <PackageReference Include="System.Reactive" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
