--- a/src/Data/Neuroglia.Data.Expressions.JQ/Neuroglia.Data.Expressions.JQ.csproj
+++ b/src/Data/Neuroglia.Data.Expressions.JQ/Neuroglia.Data.Expressions.JQ.csproj
@@ -8,9 +8,9 @@
 		<RepositoryUrl>https://github.com/neuroglia-io/framework</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
 		<PackageTags>neuroglia framework data</PackageTags>
-		<Version>2.0.1.5</Version>
-		<AssemblyVersion>2.0.1.5</AssemblyVersion>
-		<FileVersion>2.0.1.5</FileVersion>
+		<Version>2.0.1.6</Version>
+		<AssemblyVersion>2.0.1.6</AssemblyVersion>
+		<FileVersion>2.0.1.6</FileVersion>
 		<NeutralLanguage>en</NeutralLanguage>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
@@ -37,6 +37,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\..\Serialization\Neuroglia.Serialization.Abstractions\Neuroglia.Serialization.Abstractions.csproj" />
+	  <ProjectReference Include="..\..\Serialization\Neuroglia.Serialization.NewtonsoftJson\Neuroglia.Serialization.NewtonsoftJson.csproj" />
 	  <ProjectReference Include="..\Neuroglia.Data.Expressions\Neuroglia.Data.Expressions.csproj" />
 	</ItemGroup>
 
