--- a/src/Data/Neuroglia.Data.Expressions/Neuroglia.Data.Expressions.csproj
+++ b/src/Data/Neuroglia.Data.Expressions/Neuroglia.Data.Expressions.csproj
@@ -8,9 +8,9 @@
 		<RepositoryUrl>https://github.com/neuroglia-io/framework</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
 		<PackageTags>neuroglia framework data</PackageTags>
-		<Version>2.0.1.5</Version>
-		<AssemblyVersion>2.0.1.5</AssemblyVersion>
-		<FileVersion>2.0.1.5</FileVersion>
+		<Version>2.0.1.6</Version>
+		<AssemblyVersion>2.0.1.6</AssemblyVersion>
+		<FileVersion>2.0.1.6</FileVersion>
 		<NeutralLanguage>en</NeutralLanguage>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
@@ -27,7 +27,6 @@
 	
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
-		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -39,6 +38,10 @@
 			<Pack>True</Pack>
 			<PackagePath></PackagePath>
 		</None>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\..\Core\Neuroglia.Core\Neuroglia.Core.csproj" />
 	</ItemGroup>
 
 </Project>
