--- a/src/Eventing/Neuroglia.Eventing.CloudEvents/Neuroglia.Eventing.CloudEvents.csproj
+++ b/src/Eventing/Neuroglia.Eventing.CloudEvents/Neuroglia.Eventing.CloudEvents.csproj
@@ -7,10 +7,10 @@
 		<Authors>Neuroglia SPRL</Authors>
 		<RepositoryUrl>https://github.com/neuroglia-io/framework</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
-		<PackageTags>neuroglia framework mapping</PackageTags>
-		<Version>2.0.1.6</Version>
-		<AssemblyVersion>2.0.1.6</AssemblyVersion>
-		<FileVersion>2.0.1.6</FileVersion>
+		<PackageTags>neuroglia framework cloudevent</PackageTags>
+		<Version>2.0.1.7</Version>
+		<AssemblyVersion>2.0.1.7</AssemblyVersion>
+		<FileVersion>2.0.1.7</FileVersion>
 		<NeutralLanguage>en</NeutralLanguage>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
