Added the new Neuroglia.Data.Flux project

--- a/src/Data/Neuroglia.Data.EventSourcing.EventStore/Neuroglia.Data.EventSourcing.EventStore.csproj
+++ b/src/Data/Neuroglia.Data.EventSourcing.EventStore/Neuroglia.Data.EventSourcing.EventStore.csproj
@@ -7,7 +7,7 @@
     <Authors>Neuroglia SPRL</Authors>
     <RepositoryUrl>https://github.com/neuroglia-io/framework</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <PackageTags>neuroglia framework data event sourcing eventstore</PackageTags>
+    <PackageTags>neuroglia framework data event sourcing eventstore es</PackageTags>
     <Version>2.0.1.40</Version>
     <AssemblyVersion>2.0.1.40</AssemblyVersion>
     <FileVersion>2.0.1.40</FileVersion>
