--- a/src/Data/Neuroglia.Data.Expressions/Neuroglia.Data.Expressions.csproj
+++ b/src/Data/Neuroglia.Data.Expressions/Neuroglia.Data.Expressions.csproj
@@ -7,7 +7,7 @@
 		<Authors>Neuroglia SPRL</Authors>
 		<RepositoryUrl>https://github.com/neuroglia-io/framework</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
-		<PackageTags>neuroglia framework data</PackageTags>
+		<PackageTags>neuroglia framework data expression</PackageTags>
 		<Version>2.0.1.40</Version>
 		<AssemblyVersion>2.0.1.40</AssemblyVersion>
 		<FileVersion>2.0.1.40</FileVersion>
