--- a/src/Templating/Neuroglia.Templating.RazorLight/Neuroglia.Templating.RazorLight.csproj
+++ b/src/Templating/Neuroglia.Templating.RazorLight/Neuroglia.Templating.RazorLight.csproj
@@ -10,9 +10,9 @@
     <RepositoryUrl>https://github.com/neuroglia-io/framework</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>neuroglia framework templating razor</PackageTags>
-    <Version>2.0.1.58</Version>
-    <AssemblyVersion>2.0.1.58</AssemblyVersion>
-    <FileVersion>2.0.1.58</FileVersion>
+    <Version>2.0.1.59</Version>
+    <AssemblyVersion>2.0.1.59</AssemblyVersion>
+    <FileVersion>2.0.1.59</FileVersion>
     <NeutralLanguage>en</NeutralLanguage>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
@@ -37,7 +37,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="RazorLight" Version="2.0.0-rc.3" />
+    <PackageReference Include="RazorLight" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
