feat(UnitTest): Added new tests for JQ using large input data [skip hint]

--- a/test/Neuroglia.UnitTests/Neuroglia.UnitTests.csproj
+++ b/test/Neuroglia.UnitTests/Neuroglia.UnitTests.csproj
@@ -55,4 +55,10 @@
     <ProjectReference Include="..\..\src\Testing\Neuroglia.Xunit\Neuroglia.Xunit.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Assets\dogs.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
