fix(Data.Expressions.JQ): Fixed a bug in the JQExpressionEvaluator that was writting escaped JSON into the input JSON file, resulting in a format exception in JQ fix(Solution): Updated nuget package references

--- a/test/Neuroglia.UnitTests/Neuroglia.UnitTests.csproj
+++ b/test/Neuroglia.UnitTests/Neuroglia.UnitTests.csproj
@@ -59,6 +59,9 @@
     <None Update="Assets\dogs.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Assets\pets.expression.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
