ci(Workflows): adds paths-ignore [skip ci] [skip hint]

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -3,6 +3,8 @@ name: Builds and push nugets
 on:
   pull_request:
     branches: [ main ]
+    paths-ignore:
+      - '.github/**'
   workflow_call:
 
 jobs:
