--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,18 +1,18 @@
 name: Continuous integration
 
-on:
-  push:
-    branches: [ main ]
-    paths-ignore:
-      - '.github/**'
-  workflow_dispatch:
+# on:
+#   push:
+#     branches: [ main ]
+#     paths-ignore:
+#       - '.github/**'
+#   workflow_dispatch:
 
-jobs:
-  versionning:
-    uses: ./.github/workflows/versioning.yml
-    secrets: inherit
+# jobs:
+#   versionning:
+#     uses: ./.github/workflows/versioning.yml
+#     secrets: inherit
 
-  build:
-    needs: versionning
-    uses: ./.github/workflows/dotnet.yml
-    secrets: inherit
+#   build:
+#     needs: versionning
+#     uses: ./.github/workflows/dotnet.yml
+#     secrets: inherit
