--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,9 +8,14 @@ on:
   workflow_dispatch:
 
 jobs:
-  versioning:
+  test:
     # Skip if it's not running in the `neuroglia-io/framework` repo
     if: github.repository == 'neuroglia-io/framework' && github.ref_name == 'main'
+    uses: ./.github/workflows/test-dotnet.yml
+    secrets: inherit
+
+  versioning:
+    needs: [test]
     uses: ./.github/workflows/versioning.yml
     secrets: inherit
 
